# Logger

./: .gitignore  CMakeLists.txt  README.md
logs/: logs.txt
src/: Formatter.cpp  Logger.cpp  Logger.h  Outputter.cpp  Outputter.h  Record.cpp  Record.h  Time.h  main.cpp
test/: FormatterTest.cpp  OutputterTest.cpp  RecordTest.cpp
